<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Home Page -->
    
    <string name="app_name">BrumsTaxi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="need_taxi">need a taxi in a jiffy?</string>
    <string name="tired_of_waiting">Tired of waiting for your taxi? not anymore</string>
    <string name="logodesc">BrumsTaxi</string>
    <string name="driving_you_in">Driving you in and around birmingham safely</string>
    
    <!-- Login Page -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    
    <!-- Register Page -->
    <string name="reg_header">Register Page Header</string>
    <string name="yourname">Your Name:</string>
    <string name="name">Name:</string>
    <string name="yourmobile">Your Mobile:</string>
    <string name="confirmpassword">Confirm Password:</string>
    
    <!-- BookATaxi Page -->
    <string name="pick_up_from">Pick Up From</string>
    <string name="drop_off_to">Drop Off To</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="passengers">Passengers</string>
    <string name="luggage">Luggage</string>
    <string name="comments">Comments</string>
    <string name="thanksMsg">Thanks for Choosing Brumstaxi</string>
    <string name="bookTaxiResp">Your information has been received. You will get the Quotation shortly.</string>
    <string name="regResponse">Thank you for Registring with the BrumsTaxi.</string>
    
    <!-- BookATaxi Page -->
    <string name="qt_pick_up">Picking Up:</string>
    <string name="qt_dropoff">Drop off at:</string>
    <string name="qt_datetime">Date and Time:</string>
    <string name="qt_passengers">Passengers:</string>
    <string name="qt_luggage">Luggage:</string>
    <string name="qt_company">Company</string>
    <string name="qt_fare">Fare</string>
    
    <string name="qt_con_fare">Conform Fare</string>
     <string name="qt_con_fare_you">you have chosen</string>
     
     <!-- My journey -->
     <string name="mjpick_up_from">Pick Up From:</string>
     <string name="mjdrop_off_at">Drop Off at:</string>
     <!-- See you screen -->
     <string name="sy_seeyou_soon">See you Soon</string>
     <string name="sy_with_you">we will be with you</string>
     <string name="sy_in_approx">In approximately</string>
     <string name="waiting_outside">Im waiting outside</string>
     <string name="taxiType">Black Mercedes</string>
     
</resources>