<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@drawable/bg"
    >
    <ImageView
        android:id="@+id/register_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:contentDescription="@string/reg_header"
        android:background="@drawable/a1"/>
    <LinearLayout
        android:id="@+id/contentBody"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:weightSum="100"
        android:orientation="vertical"
        android:padding="20dp" >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/thanksMsg"
            android:textColor="@color/blackColor"
            android:textScaleX="2.0"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:background="@drawable/rounded_corner"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/bookTaxiResp"
                android:textColor="@color/mainColor"
                android:layout_weight="1"
                android:textScaleX="2.0"
                android:padding="20dp"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/thanksMsg"
                android:textColor="@color/blackColor"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:textScaleX="2.0"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
       android:id="@+id/bCallUs"
       android:layout_height="0dp"
       android:layout_width="match_parent"
       android:layout_weight="10"
       android:background="@drawable/call_us"     
       /> 
</LinearLayout>