<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:whatever="http://schemas.android.com/apk/res-auto"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:background="@drawable/background"
	    >
	    <ImageView
	        android:id="@+id/register_header"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentTop="true"
	        android:contentDescription="@string/reg_header"
	        android:src="@drawable/register_header" />
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:paddingTop="50dp"
	        android:paddingLeft="20dp" 
	        android:paddingBottom="80dp" 
	        android:paddingRight="20dp" >
	
	        <RelativeLayout
	            android:id="@+id/relativeLayout1"
	            android:layout_width="140dp"
	            android:layout_height="60dp"
	            android:paddingLeft="10dp"
	            android:layout_alignParentLeft="true"
	            android:layout_alignParentTop="true"
	            android:background="@drawable/rounded_corner" >
	            
	            <TextView
	                android:id="@+id/regYourNameLabel"
	                android:layout_alignParentTop="true"
	                android:textColor="@color/blackColor"
	                android:text="@string/yourname"
	                android:textSize="17sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
	            <com.andreabaccega.widget.FormEditText
	                whatever:testType="alpha"
	                android:id="@+id/regYourName"
	                android:layout_alignParentBottom="true"
	                android:textColor="@color/regTextField"
	                android:hint="@string/name"
	                android:textSize="17sp"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />
	            
	        </RelativeLayout>
	
	        <RelativeLayout
	            android:id="@+id/relativeLayout2"
	            android:layout_width="140dp"
	            android:layout_height="60dp"
	            android:paddingLeft="10dp"
	            android:layout_alignParentTop="true"
	            android:layout_alignParentRight="true"
	            android:background="@drawable/rounded_corner" >
	            
	            <TextView
	                android:id="@+id/regMobileLabel"
	                android:layout_alignParentTop="true"
	                android:textColor="@color/blackColor"
	                android:text="@string/yourmobile"
	                android:textSize="17sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
	            <com.andreabaccega.widget.FormEditText
	                whatever:testType="phone"
	                android:id="@+id/regMobile"
	                android:layout_alignParentBottom="true"
	                android:textColor="@color/regTextField"
	                android:hint="@string/yourmobile"
	                android:textSize="17sp"
	                android:inputType="phone"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />
	        </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/relativeLayout3"
	            android:layout_width="fill_parent"
	            android:layout_height="60dp"
	            android:layout_below="@+id/relativeLayout2"
	            android:layout_marginTop="20dp"
	            android:paddingLeft="20dp"
	            android:background="@drawable/rounded_corner" >
	            
	            <TextView
	                android:id="@+id/regusernameLabel"
	                android:layout_alignParentTop="true"
	                android:textColor="@color/blackColor"
	                android:text="@string/username"
	                android:textSize="17sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
	            <com.andreabaccega.widget.FormEditText
	                whatever:testType="alphaNumeric"
	                android:id="@+id/regUsername"
	                android:layout_alignParentBottom="true"
	                android:textColor="@color/regTextField"
	                android:hint="@string/username"
	                android:textSize="17sp"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />
	        </RelativeLayout>
	        
	        <RelativeLayout
	            android:id="@+id/relativeLayout4"
	            android:layout_width="fill_parent"
	            android:layout_height="60dp"
	            android:layout_below="@+id/relativeLayout3"
	            android:layout_marginTop="10dp"
	            android:paddingLeft="20dp"
	            android:background="@drawable/rounded_corner" >
	            
	            <TextView
	                android:id="@+id/regPassLabel"
	                android:layout_alignParentTop="true"
	                android:textColor="@color/blackColor"
	                android:text="@string/password"
	                android:textSize="17sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
	            <com.andreabaccega.widget.FormEditText
                    whatever:testType="nocheck"
	                android:id="@+id/regPassword"
	                android:layout_alignParentBottom="true"
	                android:textColor="@color/regTextField"
	                android:inputType="textPassword"
	                android:hint="@string/password"
	                android:textSize="17sp"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />
	        </RelativeLayout>
	
	        <RelativeLayout
	            android:id="@+id/relativeLayout5"
	            android:layout_width="fill_parent"
	            android:layout_height="60dp"
	            android:layout_below="@+id/relativeLayout4"
	            android:layout_marginTop="10dp"
	            android:paddingLeft="20dp"
	            android:background="@drawable/rounded_corner" >
	            
	            <TextView
	                android:id="@+id/regRePassLabel"
	                android:layout_alignParentTop="true"
	                android:textColor="@color/blackColor"
	                android:text="@string/confirmpassword"
	                android:textSize="17sp"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                />
	            <com.andreabaccega.widget.FormEditText
                    whatever:testType="nocheck"
	                android:id="@+id/regConfirmPassword"
	                android:layout_alignParentBottom="true"
	                android:inputType="textPassword"
	                android:textColor="@color/regTextField"
	                android:hint="@string/confirmpassword"
	                android:textSize="17sp"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                />
	        </RelativeLayout>
	
	        <Button
	            android:id="@+id/regButton"
	            android:layout_width="fill_parent"
	            android:layout_height="50dp"
	            android:layout_below="@+id/relativeLayout5"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="10dp"
	            android:background="@drawable/reg_account" />
	    </RelativeLayout>
	
	    <Button
	        android:id="@+id/callUsButton"
	        android:layout_width="fill_parent"
	        android:layout_height="61dp"
	        android:layout_alignParentBottom="true"
	        android:background="@drawable/call_us" />
	
	</RelativeLayout>