<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:weightSum="100"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:contentDescription="@string/app_name"
        android:background="@drawable/a14"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qt_pick_up"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
        />
        <TextView
            android:id="@+id/qtPickingupValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"  
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qt_dropoff"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
        />
        <TextView
            android:id="@+id/qtDropOffValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"  
        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qt_datetime"
            android:textColor="@color/blackColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
        />
        <TextView
            android:id="@+id/qtDateTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/mainColor"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"  
        />
    </LinearLayout>
    
	<LinearLayout
	     android:layout_width="fill_parent"
	     android:layout_height="0dp"
	     android:layout_weight="10"
	     android:layout_marginLeft="20dp"
	     android:layout_marginRight="20dp"
	     android:baselineAligned="false"
	     android:layout_marginTop="5dp"
	     android:background="@drawable/rounded_corner"
	     android:orientation="horizontal"
	     android:weightSum="100" >
	       <LinearLayout
		        android:layout_width="0dp"
		        android:layout_height="fill_parent"
		        android:layout_weight="50"
		        android:orientation="horizontal"
	        >
	           <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/qt_passengers"
		            android:textColor="@color/blackColor"
		            android:textSize="20sp"
		            android:layout_marginTop="5dp"
		            android:layout_marginLeft="5dp"
		        />
		        <TextView
		            android:id="@+id/qtPassengerValue"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/mainColor"
		            android:textSize="20sp"
		            android:layout_marginTop="5dp"
		            android:layout_marginLeft="5dp"  
		        />
	       </LinearLayout>
	       <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="50"
                android:orientation="horizontal"
            >
		        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qt_luggage"
                    android:textColor="@color/blackColor"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                />
                <TextView
                    android:id="@+id/qtLuggageValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/mainColor"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"  
                />
           </LinearLayout>    
	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:scrollbars="vertical"
        
	    >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:baselineAligned="false"
	        android:background="@color/mainColor"
	        android:weightSum="100"
	        android:orientation="horizontal"
	        >
	        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="50"
                android:orientation="horizontal"
            >
               <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qt_company"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                />
           </LinearLayout>
           <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="50"
                android:orientation="horizontal"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qt_fare"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                />
           </LinearLayout>
	    </LinearLayout>
  	    <ScrollView
  	        android:id="@+id/quoteScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
         <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/companyQuoteBody"
                android:orientation="vertical"
                android:background="@color/whiteColor"
               >
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:baselineAligned="false"
                android:background="@color/mainColor"
                android:weightSum="100"
                android:orientation="horizontal"
            >
               <TextView
                   android:id="@+id/myid"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                />
                <TextView
                    android:id="@+id/myid1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="50"
                    android:text="@string/qt_pick_up"
                    android:textColor="@color/whiteColor"
                    android:textSize="20sp"
                />
          </LinearLayout> 
<!--##############################       Start         ########################-->
            



<!--##############################        End          ###########################-->
            
             </LinearLayout> 
        </ScrollView>
	</LinearLayout>
</LinearLayout>
