<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <RelativeLayout
        android:id="@+id/loginHeader"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:background="@color/mainColor"
         >
        <Button 
            android:id="@+id/loginLogo"
            android:layout_height="50dp"
            android:layout_width="150dp"
            android:background="@drawable/logo1"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="80dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp" >
        
        <TextView
            android:id="@+id/loginLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/whiteColor"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            />
        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/loginLabel"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_corner" >
            
            <TextView
                android:id="@+id/regusernameLabel"
                android:layout_alignParentTop="true"
                android:textColor="@color/blackColor"
                android:text="@string/username"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
           <com.andreabaccega.widget.FormEditText
                whatever:testType="nocheck"
                android:id="@+id/loginUsername"
                android:layout_alignParentBottom="true"
                android:textColor="@color/regTextField"
                android:hint="@string/username"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/relativeLayout3"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:background="@drawable/rounded_corner" >
            
            <TextView
                android:id="@+id/regPassLabel"
                android:layout_alignParentTop="true"
                android:textColor="@color/blackColor"
                android:text="@string/password"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.andreabaccega.widget.FormEditText
                whatever:testType="nocheck"
                android:id="@+id/loginPassword"
                android:layout_alignParentBottom="true"
                android:textColor="@color/regTextField"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/loginButton"
            android:layout_alignParentRight="true"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_below="@+id/relativeLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/a3" />
        
      </RelativeLayout>  
    <Button 
        android:id="@+id/loginCallUs"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:background="@drawable/call_us"
        />

</RelativeLayout>